@@ -8,14 +8,16 @@ describe 'hidden input' do
   before do
     @output_buffer = ''
     mock_everything
-
-    concat(semantic_form_for(@new_post) do |builder|
-      concat(builder.input(:secret, :as => :hidden))
-      concat(builder.input(:author_id, :as => :hidden, :value => 99))
-      concat(builder.input(:published, :as => :hidden, :input_html => {:value => true}))
-      concat(builder.input(:reviewer, :as => :hidden, :input_html => {:class => 'new_post_reviewer', :id => 'new_post_reviewer'}))
-      concat(builder.input(:author, :as => :hidden, :value => 'direct_value', :input_html => {:value => "formtastic_value"}))
-    end)
+    
+    with_deprecation_silenced do
+      concat(semantic_form_for(@new_post) do |builder|
+        concat(builder.input(:secret, :as => :hidden))
+        concat(builder.input(:author_id, :as => :hidden, :value => 99))
+        concat(builder.input(:published, :as => :hidden, :input_html => {:value => true}))
+        concat(builder.input(:reviewer, :as => :hidden, :input_html => {:class => 'new_post_reviewer', :id => 'new_post_reviewer'}))
+        concat(builder.input(:author, :as => :hidden, :value => 'direct_value', :input_html => {:value => "formtastic_value"}))
+      end)
+    end
   end
 
   it_should_have_input_wrapper_with_class("hidden")
@@ -77,14 +79,16 @@ describe 'hidden input' do
     before do
       @output_buffer = ''
       mock_everything
-
-      concat(semantic_form_for(@new_post, :namespace => 'context2') do |builder|
-        concat(builder.input(:secret, :as => :hidden))
-        concat(builder.input(:author_id, :as => :hidden, :value => 99))
-        concat(builder.input(:published, :as => :hidden, :input_html => {:value => true}))
-        concat(builder.input(:reviewer, :as => :hidden, :input_html => {:class => 'new_post_reviewer', :id => 'new_post_reviewer'}))
-        concat(builder.input(:author, :as => :hidden, :value => 'direct_value', :input_html => {:value => "formtastic_value"}))
-      end)
+      
+      with_deprecation_silenced do
+        concat(semantic_form_for(@new_post, :namespace => 'context2') do |builder|
+          concat(builder.input(:secret, :as => :hidden))
+          concat(builder.input(:author_id, :as => :hidden, :value => 99))
+          concat(builder.input(:published, :as => :hidden, :input_html => {:value => true}))
+          concat(builder.input(:reviewer, :as => :hidden, :input_html => {:class => 'new_post_reviewer', :id => 'new_post_reviewer'}))
+          concat(builder.input(:author, :as => :hidden, :value => 'direct_value', :input_html => {:value => "formtastic_value"}))
+        end)
+      end
     end
 
     attributes_to_check = [:secret, :author_id, :published, :reviewer]
